--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -33,17 +33,17 @@
 
 // Palette.
 	$palette: (
-		bg:					#312450,
-		bg-alt:				darken(#312450, 5),
+		bg:					#20313d,
+		bg-alt:				darken(#20313d, 5),
 		fg:					rgba(255,255,255,0.55),
 		fg-bold:			#ffffff,
 		fg-light:			rgba(255,255,255,0.35),
 		border:				rgba(255,255,255,0.15),
 		border-bg:			rgba(255,255,255,0.05),
-		accent1:			#5e42a6,
-		accent1-alt:		darken(#5e42a6, 10),
-		accent2:			#5052b5,
-		accent2-alt:		darken(#5052b5, 10),
-		accent3:			#0f6440,
-		accent3-alt:		darken(#0f6440, 10)
+		accent1:			#2e9692,
+		accent1-alt:		darken(#2e9692, 10),
+		accent2:			#3aa4ca,
+		accent2-alt:		darken(#3aa4ca, 10),
+		accent3:			#b84d50,
+		accent3-alt:		darken(#b84d50, 10)
 	);
